Summary: eaglegaze-thunderbird-power-consumption add fix dokerfile & envs Notes: none Dependencies: none Committer: maistrenkoso@dtek.com

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ ALCHEMY_CONNECTION=
 
 GENERAL_BRANCH=
 PATH_TO_SCRIPT=/usr/src/python-app
-MAIN_DIR=wind_forecast
+MAIN_DIR=consumption_forecast
 
 GIT_SSL_NO_VERIFY=
 GIT_TOKEN=
@@ -15,4 +15,4 @@ GIT_URN=
 NETWORK_MODE=host #host eaglegaze, bridge, none, service:[service name], container:[container name/id]
 DOCKERFILE=Dockerfile # Dockerfile-stop, Dockerfile-start
 LOG_PATH=/var/log/_eaglegaze
-LOG_FILE=onshore
+LOG_FILE=consumption
