--- a/requirements.in
+++ b/requirements.in
@@ -1,2 +1,14 @@
-eaglegaze-common @ file:///home/mg/PycharmProjects/eaglegaze-main/eaglegaze-common/dist/eaglegaze_common-1.0.0-py3-none-any.whl
 sklearn
+# pandas
+# numpy
+
+psycopg2-binary
+sqlalchemy
+
+setuptools
+wheel
+tqdm
+twine
+
+python-dotenv
+python-decouple
