--- a/requirements.txt
+++ b/requirements.txt
@@ -4,315 +4,99 @@
 #
 #    pip-compile
 #
-absl-py==0.15.0
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-    #   tensorflow
-astunparse==1.6.3
-    # via
-    #   eaglegaze-common
-    #   tensorflow
 bleach==3.3.0
-    # via
-    #   eaglegaze-common
-    #   readme-renderer
-cached-property==1.5.2
-    # via
-    #   eaglegaze-common
-    #   h5py
-cachetools==4.2.4
-    # via
-    #   eaglegaze-common
-    #   google-auth
+    # via readme-renderer
 certifi==2021.5.30
-    # via
-    #   eaglegaze-common
-    #   requests
+    # via requests
 cffi==1.14.5
-    # via
-    #   cryptography
-    #   eaglegaze-common
+    # via cryptography
 chardet==4.0.0
-    # via
-    #   eaglegaze-common
-    #   requests
-clang==5.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
+    # via requests
 colorama==0.4.4
-    # via
-    #   eaglegaze-common
-    #   twine
+    # via twine
 cryptography==3.4.7
-    # via
-    #   eaglegaze-common
-    #   secretstorage
-dataclasses==0.8
-    # via
-    #   eaglegaze-common
-    #   werkzeug
-datetime==4.3
-    # via eaglegaze-common
+    # via secretstorage
 docutils==0.17.1
-    # via
-    #   eaglegaze-common
-    #   readme-renderer
-eaglegaze-common @ file:///home/mg/PycharmProjects/eaglegaze-main/eaglegaze-common/dist/eaglegaze_common-1.0.0-py3-none-any.whl
-    # via -r requirements.in
-flatbuffers==1.12
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-gast==0.4.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-google-auth==1.35.0
-    # via
-    #   eaglegaze-common
-    #   google-auth-oauthlib
-    #   tensorboard
-google-auth-oauthlib==0.4.6
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-google-pasta==0.2.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-grpcio==1.42.0
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-    #   tensorflow
-h5py==3.1.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
+    # via readme-renderer
+greenlet==1.1.2
+    # via sqlalchemy
 idna==2.10
-    # via
-    #   eaglegaze-common
-    #   requests
+    # via requests
 importlib-metadata==4.5.0
     # via
-    #   eaglegaze-common
     #   keyring
-    #   markdown
+    #   sqlalchemy
     #   twine
 jeepney==0.6.0
     # via
-    #   eaglegaze-common
     #   keyring
     #   secretstorage
 joblib==1.1.0
-    # via
-    #   eaglegaze-common
-    #   scikit-learn
-keras==2.6.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-keras-preprocessing==1.1.2
-    # via
-    #   eaglegaze-common
-    #   tensorflow
+    # via scikit-learn
 keyring==23.0.1
-    # via
-    #   eaglegaze-common
-    #   twine
-markdown==3.3.6
-    # via
-    #   eaglegaze-common
-    #   tensorboard
+    # via twine
 numpy==1.19.5
     # via
-    #   eaglegaze-common
-    #   h5py
-    #   keras-preprocessing
-    #   opt-einsum
-    #   pandas
     #   scikit-learn
     #   scipy
-    #   tensorboard
-    #   tensorflow
-oauthlib==3.1.1
-    # via
-    #   eaglegaze-common
-    #   requests-oauthlib
-opt-einsum==3.3.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
 packaging==20.9
-    # via
-    #   bleach
-    #   eaglegaze-common
-pandas==1.1.5
-    # via eaglegaze-common
+    # via bleach
 pkginfo==1.7.0
-    # via
-    #   eaglegaze-common
-    #   twine
-protobuf==3.19.1
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-    #   tensorflow
+    # via twine
 psycopg2-binary==2.9.2
-    # via eaglegaze-common
-pyasn1==0.4.8
-    # via
-    #   eaglegaze-common
-    #   pyasn1-modules
-    #   rsa
-pyasn1-modules==0.2.8
-    # via
-    #   eaglegaze-common
-    #   google-auth
+    # via -r requirements.in
 pycparser==2.20
-    # via
-    #   cffi
-    #   eaglegaze-common
+    # via cffi
 pygments==2.9.0
-    # via
-    #   eaglegaze-common
-    #   readme-renderer
+    # via readme-renderer
 pyparsing==2.4.7
-    # via
-    #   eaglegaze-common
-    #   packaging
-pysolar==0.10
-    # via eaglegaze-common
-python-dateutil==2.8.1
-    # via
-    #   eaglegaze-common
-    #   pandas
+    # via packaging
+python-decouple==3.5
+    # via -r requirements.in
 python-dotenv==0.19.2
-    # via eaglegaze-common
-pytz==2021.1
-    # via
-    #   datetime
-    #   eaglegaze-common
-    #   pandas
+    # via -r requirements.in
 readme-renderer==29.0
-    # via
-    #   eaglegaze-common
-    #   twine
+    # via twine
 requests==2.25.1
     # via
-    #   eaglegaze-common
-    #   requests-oauthlib
     #   requests-toolbelt
-    #   tensorboard
     #   twine
-requests-oauthlib==1.3.0
-    # via
-    #   eaglegaze-common
-    #   google-auth-oauthlib
 requests-toolbelt==0.9.1
-    # via
-    #   eaglegaze-common
-    #   twine
+    # via twine
 rfc3986==1.5.0
-    # via
-    #   eaglegaze-common
-    #   twine
-rsa==4.8
-    # via
-    #   eaglegaze-common
-    #   google-auth
+    # via twine
 scikit-learn==0.24.2
     # via sklearn
 scipy==1.5.4
-    # via
-    #   eaglegaze-common
-    #   scikit-learn
+    # via scikit-learn
 secretstorage==3.3.1
-    # via
-    #   eaglegaze-common
-    #   keyring
+    # via keyring
 six==1.15.0
     # via
-    #   absl-py
-    #   astunparse
     #   bleach
-    #   eaglegaze-common
-    #   google-auth
-    #   google-pasta
-    #   grpcio
-    #   keras-preprocessing
-    #   python-dateutil
     #   readme-renderer
-    #   tensorflow
 sklearn==0.0
     # via -r requirements.in
-tensorboard==2.6.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-tensorboard-data-server==0.6.1
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-tensorboard-plugin-wit==1.8.0
-    # via
-    #   eaglegaze-common
-    #   tensorboard
-tensorflow==2.6.2
-    # via eaglegaze-common
-tensorflow-estimator==2.6.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
-termcolor==1.1.0
-    # via
-    #   eaglegaze-common
-    #   tensorflow
+sqlalchemy==1.4.29
+    # via -r requirements.in
 threadpoolctl==3.0.0
     # via scikit-learn
 tqdm==4.61.0
     # via
-    #   eaglegaze-common
+    #   -r requirements.in
     #   twine
 twine==3.4.1
-    # via eaglegaze-common
+    # via -r requirements.in
 typing-extensions==3.7.4.3
-    # via
-    #   eaglegaze-common
-    #   importlib-metadata
-    #   tensorflow
+    # via importlib-metadata
 urllib3==1.26.5
-    # via
-    #   eaglegaze-common
-    #   requests
+    # via requests
 webencodings==0.5.1
-    # via
-    #   bleach
-    #   eaglegaze-common
-werkzeug==2.0.2
-    # via
-    #   eaglegaze-common
-    #   tensorboard
+    # via bleach
 wheel==0.36.2
-    # via
-    #   astunparse
-    #   eaglegaze-common
-    #   tensorboard
-    #   tensorflow
-wrapt==1.12.1
-    # via
-    #   eaglegaze-common
-    #   tensorflow
+    # via -r requirements.in
 zipp==3.4.1
-    # via
-    #   eaglegaze-common
-    #   importlib-metadata
-zope.interface==5.4.0
-    # via
-    #   datetime
-    #   eaglegaze-common
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
