Summary: eaglegaze-thunderbird-power-consumption add volumes Notes: none Dependencies: none Committer: maistrenkoso@dtek.com

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,32 @@
 DB_PARAMS=
-
 ALCHEMY_CONNECTION=
 
-GENERAL_BRANCH=
+GENERAL_BRANCH= # main develop feature/adapt_to_docker
 PATH_TO_SCRIPT=/usr/src/python-app
 MAIN_DIR=consumption_forecast
 
-GIT_SSL_NO_VERIFY=
+GIT_SSL_NO_VERIFY=0
 GIT_TOKEN=
-GIT_HOST=
-GIT_URN=
+GIT_HOST=dev.azure.com
+GIT_URN=/Dtek-SP/Eaglegaze/_git
 
 # if host ALCHEMY_CONNECTION via localhost
 NETWORK_MODE=host #host eaglegaze, bridge, none, service:[service name], container:[container name/id]
 DOCKERFILE=Dockerfile # Dockerfile-stop, Dockerfile-start
+# LOG_PATH=/tmp/log/_eaglegaze
 LOG_PATH=/var/log/_eaglegaze
-LOG_FILE=consumption
+LOG_FILE=power-consumption
+
+# STORAGE_PATH=/tmp/storage/power-consumption
+STORAGE_PATH=/storage/power-consumption
+
+STORAGE=/storage
+
+VOLUME_DEVICE= # /dev /iso
+
+VOLUME_NAME=eaglegaze-data-power-consumption
+
+BUCKET_NAME= # eaglegaze-dev-data eaglegaze-prod-data
+
+# VOLUME_DRIVER=rexray/s3fs:latest #S3
+VOLUME_DRIVER=local
